stable with bulk tx send
