# docs/swagger.json
@@ -35,6 +35,68 @@
                 }
             }
         },
+        "/operator/deployedstake/": {
+            "get": {
+                "description": "Responds with the Operator stake deployed in all sponsorships.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Operator"
+                ],
+                "summary": "Get the Streamr Operator total deployed stake.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DeployedStakeResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/operator/reducestaketo/{sponsorship}/{amount}": {
+            "get": {
+                "description": "Responds with the transaction hash.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Operator"
+                ],
+                "summary": "Change Streamr Operator stake on a given sponsor.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "sponsorship address",
+                        "name": "sponsorship",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "amount in wei",
+                        "name": "amount",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TransactionResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/operator/sponsorshipsandearnings": {
             "get": {
                 "description": "Responds with the list of sponsorships and uncollected earnings.",
@@ -52,6 +114,45 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.Operator"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/operator/stake/{sponsorship}/{amount}": {
+            "get": {
+                "description": "Responds with the transaction hash.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Operator"
+                ],
+                "summary": "Increase Streamr Operator stake on a given sponsor.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "sponsorship address",
+                        "name": "sponsorship",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "amount in wei",
+                        "name": "amount",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TransactionResponse"
                             }
                         }
                     }
@@ -129,7 +230,33 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Operator"
+                                "$ref": "#/definitions/models.TransactionResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/operator/withdrawearningsandcompound": {
+            "get": {
+                "description": "Withdraws earnings from all sponsorships and restake to compound.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Operator"
+                ],
+                "summary": "Withdraw earnings from sponsorship and restake.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/models.TransactionResponse"
+                                }
                             }
                         }
                     }
@@ -357,6 +484,20 @@
                 }
             }
         },
+        "models.DeployedStakeResponse": {
+            "type": "object",
+            "properties": {
+                "deployedBySponsorship": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/big.Int"
+                    }
+                },
+                "totalDeployed": {
+                    "$ref": "#/definitions/big.Int"
+                }
+            }
+        },
         "models.Operator": {
             "type": "object",
             "properties": {
@@ -382,6 +523,14 @@
             "properties": {
                 "stakedInto": {
                     "$ref": "#/definitions/big.Int"
+                }
+            }
+        },
+        "models.TransactionResponse": {
+            "type": "object",
+            "properties": {
+                "txHash": {
+                    "type": "string"
                 }
             }
         }
