# routes/routes.go
@@ -15,8 +15,12 @@ func SetupRouter(o *models.Operator) *gin.Engine {
 		v1.GET("/operator", handlers.GetOperator(o))
 		v1.GET("/operator/valuewithoutearnings", handlers.OperatorValueWithoutEarnings(o))
 		v1.GET("/operator/withdrawearnings", handlers.OperatorWithdrawEarnings(o))
+		v1.GET("/operator/withdrawearningsandcompound", handlers.WithdrawEarningsAndCompound(o))
 		v1.GET("/operator/sponsorshipsandearnings", handlers.SponsorshipsAndEarnings(o))
 		v1.GET("/operator/stakedinto/:address", handlers.StakedInto(o))
+		v1.GET("/operator/deployedstake", handlers.DeployedStake(o))
+		v1.GET("/operator/reducestaketo/:sponsorship/:amount", handlers.ReduceStakeTo(o))
+		v1.GET("/operator/stake/:sponsorship/:amount", handlers.Stake(o))
 	}
 
 	return router
